--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
     
 <div class="hero">
-<form action="   " method="POST">
+<form action="https://formspree.io/f/xnqlgjpk" method="POST">
     <div class="input-group">
         <input type="text" name="name" required>
         <label for="name"><i class="fas fa-user-shield"></i> Your Full Name</label>
