--- a/index.html
+++ b/index.html
@@ -37,18 +37,18 @@
     <div class="row2">
         <div class="input-group">
             <input type="text" name="dcname" required>
-            <label for="dcname"><i class="fab fa-discord"></i> Your Discord Username</label>
+            <label for="dcname"><i class="fab fa-discord"></i> Discord Username</label>
         </div>
     
         <div class="input-group">
             <input type="text" name="dctag" required>
-            <label for="dctag"><i class="fas fa-tag"></i> Your Discord #Tag</label>
+            <label for="dctag"><i class="fas fa-tag"></i> Discord #Tag</label>
         </div>
     </div>
     <div class="row3">
         <div class="input-group">
             <input type="text" name="dcid" required>
-            <label for="dcid"><i class="fas fa-portrait"></i> Your Discord id</label>
+            <label for="dcid"><i class="fas fa-portrait"></i> Discord id</label>
         </div>
         <div class="input-group">
             <input type="text" name="dcrole" required>
